criei a tela home

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,3 +33,11 @@ section#telefone {
   width: 288px;
   background: url(../imagens/frame-iphone.png) no-repeat;
 }
+
+iframe#tela {
+  position: relative;
+  top: 65px;
+  left: 17px;
+  width: 255px;
+  height: 426px;
+}
