--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,18 +3,17 @@
 * {
   margin: 0px;
   padding: 0px;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 html,
 body {
   height: 100vh;
-  width: 100vw;
+  width: 98vw;
   background-color: black;
 }
 
 body {
-  background: url(../imagens/fundo-madeira.png) no-repeat top center;
+  background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
   background-size: cover;
   background-attachment: fixed;
 }
@@ -29,15 +28,34 @@ section#telefone {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 590px;
-  width: 288px;
+  height: 627px;
+  width: 311px;
   background: url(../imagens/frame-iphone.png) no-repeat;
 }
 
 iframe#tela {
   position: relative;
-  top: 65px;
-  left: 17px;
-  width: 255px;
-  height: 426px;
+  top: 80px;
+  left: 22px;
+  width: 269px;
+  height: 471px;
+}
+
+section#redes-sociais {
+  text-align: right;
+}
+
+section#redes-sociais img {
+  width: 50px;
+  margin: 10px;
+  border-radius: 50%;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+  box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+  border: 2px solid rgba(255, 255, 255, 0.603);
+  transform: translate(-3px, -3px);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.623);
+  transition: transform 0.5s border 1s;
 }
